versioned_docs/version-1.8/administration/catalog.mdx
---
title: Catalog
description: Administrators can create a catalog of pre-defined development environments for developers to use.
sidebar_label: Catalog
id: catalog
---

import Image from "@theme/Image";
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import TiersList from "@theme/TiersList";

# Catalog <TiersList tiers="Scale Enterprise Self-Hosted" />

The Catalog feature enables `admins` to pre-configure a list of applications, from the Okteto web UI, that are made available to `developers` in the same Okteto instance when they launch a dev environment from the UI. By pre-configuring these catalog entries, a developer can shorten the time it takes to deploy a development environment. With Catalog, developers don’t need to worry about using the right Okteto manifest or configuring the necessary environment variables.

This feature gives more control to Okteto administrators over the developer experience and provides a more seamless workflow to help developers get started with their work.

## Create your Catalog

:::info

_Only accounts with the administrator role can use this feature._

:::

Within the Okteto UI, navigate to the `Admin` page and select the `Catalog` tab. On this tab, click the `Add Repository` button to open the `Add Repository` form.

### Add an application to the catalog

Completing this form adds an entry to your Catalog, which is basically a pre-defined application configuration that enables a developer to one-click deploy a development environment using that repository and the definition you’ve provided for it.

Fill out as much of the form that makes sense for you. You will see:

- Name\*
- Repository URL\*
- [Default Branch](#define-a-default-branch)
- [Manifest Path](#define-a-manifest-path)
- [Environment Variables](#add-environment-variables)

Only the `Name` and `Repository URL` fields are required. When done, click `Save`.

<p align="center">
  <Image
    src={require("@site/static/img/gc_add_repo.png").default}
    alt="add a repository to the Catalog"
    width="900"
  />
</p>

### Define a Default Branch

The default branch you specify here will be the default branch used when a developer selects this Catalog item to deploy a development environment.

You can specify multiple catalog entries for the same `Repository URL` and set a different `Default Branch` for each one if your use case necessitates that.

### Define a Manifest Path

This field should (optionally) point to where your Okteto manifest resides. This provides additional control to provide a smoother experience for developers who deploy a development environment from the Catalog.

### Add Environment Variables

You can also (optionally) add Environment Variables to your Catalog entry to standardize how the development environment is deployed. Similar to the Default Branch entry, you could specify multiple catalog entries for the same Repository URL each with different Environment Variables.

<p align="center">
  <Image
    src={require("@site/static/img/gc_add_env_vars.png").default}
    alt="add environment variables to Catalog repo"
    width="800"
  />
</p>

## Launch a Dev Environment from your Catalog

Once you’ve defined your Catalog entries, you can navigate to `Namespaces` → `Launch Dev Environment` → `Catalog`.

In this tab you should see all of the repositories you’ve added (and pre-configured). Select an entry you wish to use and click `Launch`.

<p align="center">
  <Image
    src={require("@site/static/img/gc_launch_dev_env.png").default}
    alt="launch a development environment from the Catalog"
    width="600"
  />
</p>

<p align="center">
  <Image
    src={require("@site/static/img/gc_view_env_vars.png").default}
    alt="view a Catalog repo's environment variables"
    width="600"
  />
</p>
